# Class_Projects_Public

./: LICENSE  README.md
CSC4100/tafinley43_p1/tafinley43_p1/: Makefile  box.S  kernel.c
CSC4100/tafinley43_p2/tafinley43_p2/: Makefile  boot.S  box.S  kernel.c  process.c  process.h  process_asm.S
CSC4100/tafinley43_p3/tafinley43_p3/: Makefile  kernel.c  process.c  process_asm.S  queue.c  queue.h  timer_asm.S
CSC_2510_Bask_files/: Numbers.csv
CSC_2510_Bask_files/Lab4-files_by_Tate_F/: loops.sh  mine.sh  oddeven (1).sh
CSC_2510_Bask_files/Lab5_Tate_F/: args.sh  lab5.sh  myname.sh  myname2.sh
CSC_2510_Bask_files/Lab6_Tate_F/: nethelper.sh
CSC_2510_Bask_files/Lab8_Tate_F/: lab08.sh
Digital_System_Design/097855107084/: analysis.html  index.html  market_info.html  operation.html  style.css
Digital_System_Design/PE2 - Copy/: PE2.qsf  READ_ME.txt  hw_image_generator.vhd
Digital_System_Design/PONG_PROJECT/pong2/: pong2.qpf  pong2.qws
Digital_System_Design/PONG_PROJECT/pong2a/: dual_boot.qsys  hw_image_generator.vhd  hw_image_generator.vhd.bak  pong2a.qsf  pong2a.qsf.bak  pong2a.vhd.bak
Digital_System_Design/PONG_PROJECT/pong2b/: hw_image_generator.vhd  pong2b.vhd  scoreboard.vhd.bak
Digital_System_Design/PONG_PROJECT/pongC/: countToSevenSegment.vhd  dual_boot.sopcinfo  hw_image_generator.vhd.bak  pong2b.qsf  pong2b.qsf.bak  pong2b.qws  pong2b.vhd  vga_pll_25_175.vhd
Digital_System_Design/Tate_Finley_Hw3/Problem_6-7_for_#1/: my_And2.vhd
Digital_System_Design/Tate_Finley_Hw3/Problem_6-7_for_#2/: hw3p44.vhd
Digital_System_Design/Tate_Finley_Hw3/Problem_6-7_for_#3/: hw3p47.vhd  my_Output.vhd
Dissection_Project/097855107084/: READ_ME.txt  photo_journal.html  reassembly.html
Embedded_Systems/Embedded_Project_1/m1c/: CMakeLists.txt  READ_ME.txt  m1c.c  picoedub.h
Embedded_Systems/Embedded_Project_2/m2a/: CMakeLists.txt  m2a.c
Embedded_Systems/Embedded_Project_4/DS3231/: CMakeLists.txt  I2C_application1.c
Embedded_Systems/Embedded_Project_4/Watchdog_UART/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  code.c  picoedub.h
MatLab/: Assignment.m  Butterworth.m  ECE2020_Project_1.m  ECE_script_example.m  HW10_problem1.m  HW10_problem2.m  HW3_Problem_1.m  HW3_Problem_2.m  HW4_Problem_1.m  HW4_Problem_2.m  HW5_Problem_1.m  HW5_Problem_2.m  HW9_Problem1.m  HW9_Problem2.m  Homework_8-26.txt  Homework_9-2.txt  MAT_PLOT_1007.fig  Meteoroid.m  Plot_FFT_Given_X.m  Quine.m  Signal.m  Thevenin_equivalent.m  capacitor_impedance.m  copperWireParameters.m  copperWireParameters2.m  ece2001-2002-1028.txt  ece2001-2022-0826.txt  ece2001-2022-0902.txt  ece2001-2022-0909.txt  ece2001-2022-0916.txt  ece2001-2022-0923.txt  ece2001-2022-0930.txt  ece2001-2022-1007.txt  ece2001-2022-1014  ece2001-2022-1st.txt  parallelResistanceFile.m  path_loss.m  plot_control_system.m  print_Lab6_waveform.m  print_Lab7A1_waveform.m  (+8 more)
MatLab/Lab_data/: lab1.xlsx  lab10.xlsx  lab2.xlsx  lab3.xlsx  lab4.xlsx  lab5.xlsx  lab6.xlsx  lab7.xlsx  lab8.xlsx  lab9.xlsx
SQL/db_resource/Project4/: Assumptions.txt  (+1 more)
VHDL/ALU/: ALU74381.qsf  ALU74381.vhd
VHDL/PE2/: PE2.qpf  PE2.vhd
VHDL/Project/: ALU_Control_unit.vhd.bak  ALU_mux.vhd  Comp_Design_Project.qsf  Comp_Design_Project_nativelink_simulation.rpt  Computer.vhd.bak  Control_unit.vhd  Control_unit.vhd.bak  ReadUnit.vhd.bak  RegisterPackage.vhd  Register_decoder.vhd.bak  mem.vhd  reg_unit.vhd.bak  sign_extend.vhd  testbench.vhd
VHDL/Project_Pipelined/: ALU.vhd  ALU.vhd.bak  ALU_Control_unit.vhd  ALU_mux.vhd.bak  AND_gate.vhd  AND_gate.vhd.bak  Adder.vhd.bak  Computer.vhd  EXMEM_reg.vhd.bak  IDEX_reg.vhd  IDEX_reg.vhd.bak  IFID_reg.vhd  IFID_reg.vhd.bak  Instr_mux.vhd  Instr_mux.vhd.bak  MEMWB_reg.vhd  MEMWB_reg.vhd.bak  RegisterPackage.vhd.bak  Register_decoder.vhd  Register_mux.vhd.bak  WriteUnit.vhd.bak  reg_unit_registers.vhd  reg_unit_registers.vhd.bak  regn.vhd.bak  sign_extend.vhd.bak  testbench.vhd
VHDL/Tate_Finley_S24_Phase1/: lab1.qpf  lab1.qsf
VHDL/Tate_Finley_S24_Phase2/: Adder.vhd  Comp_Design_Project.qsf  Computer.vhd  READ_ME.txt  Register_mux.vhd  mem.cmp  mem.qip  testbench.vhd
VHDL/Test/: ALU74381.qpf  ALU74381.qws  ALU74381.vhd.bak  ALU74381_description.txt
VHDL/de10_lite_VGA/: hw_image_generator.vhd  vga_top.qsf  vga_top_assignment_defaults.qdf
VHDL/de10_lite_accelerometer/: accelerometer_top.qpf  accelerometer_top.qsf  accelerometer_top.qws  accelerometer_top.vhd  accelerometer_top_assignment_defaults.qdf
VHDL/decoder3to8/: decoder3to8.qpf  decoder3to8.qsf  decoder3to8.qws  decoder3to8.vhd  shift_register.vhd  testbench.vhd
VHDL/memory/: RAM_top.vhd  RAM_top.vhd.bak  lab1.qws  lab1_nativelink_simulation.rpt  mem1.cmp  mem1.qip  mem1.vhd  mem1_inst.vhd  regn.vhd.bak
c_cplus_programs/CSC 2400/: Vagrantfile  done.txt  error1.txt  error2.txt  error3.txt  graph1.txt  graph2.txt  max-element-10.txt  max-element-100.txt  max-element-1000.txt  noerror.txt  permutations.cpp  solution  tafinley43.cpp  tafinley43P1.cpp  tafinley43P2.cpp  tafinley43P3.cpp  tafinley43P4.cpp
c_cplus_programs/Micro_C/: Alarm.c  Alarm_onoff_SW5.c  Alarm_onoff_Switch.c  B2D_D2B.c  Binary_to_Decimal_conv_7Seg.c  Counting_one_display.c  Counting_two_7seg_EXTI_SysTick.c  Display_4_digits_7Seg.c  Display_myltiple_7seg_SysTick.c  EXTI_PA5_LED0.c  Flashing_LED0.c  Flashing_LED1.c  Flashing_LED3.c  LED_on_off.c  LED_on_off_with_LED2.c  OC_PB0_1.c  OC_PB0_1_center.c  OC_PB0_2.c  SW4.c  SW5.c  SW5_to_LED0.c  Switch_PB1_to_LED0.c  SysTick_Counting_7seg_EXTI_ONOFF.c  SysTick_Flashing_LED0.c  SysTick_Flashing_LED_EXTI_OnOff.c  TIM2_C3_Delay.c  TIM2_C3_Periodic_Interrupts_1.c  TIM2_C3_Periodic_Interrupts_2.c
capstone/: DOGM163.py  LCD_Display_Subsystem_code.py
python_programs/Python/: bank.py  calculator.py  calculator2.py  class.py  compare.py  format.py  games.py  hat.py  hello.py  house.py  houses.py  loop.py  matLab.py  meow.py  mod.py  names.csv  names.py  names.txt  scream.py  sleep.py  student.py  student2.py  test.py  type.py  unpack.py  validate.py  vault.py  world.py
(+1994 files in other folders)
