cmake_minimum_required(VERSION 3.13)

# initialize the SDK directly
# note: this must happen before project()
include(pico_sdk_import.cmake)

project(m4_project)

# initialize the Raspberry Pi Pico SDK
pico_sdk_init()

# rest of your project
add_executable(m4 I2C_application1.c)

# Add pico_stdlib library which aggregates commonly used features
target_link_libraries(m4 pico_stdlib hardware_i2c)

function(pico_add_dis_output2 TARGET)
    add_custom_command(TARGET ${TARGET} POST_BUILD
        COMMAND ${CMAKE_OBJDUMP} -S $<TARGET_FILE:${TARGET}> >$<IF:$<BOOL:$<TARGET_PROPERTY:${TARGET},OUTPUT_NAME>>,$<TARGET_PROPERTY:${TARGET},OUTPUT_NAME>,$<TARGET_PROPERTY:${TARGET},NAME>>.dis2)

    if (PICO_COMPILER STREQUAL "pico_arm_gcc")
        pico_find_compiler(PICO_COMPILER_SIZE ${PICO_GCC_TRIPLE}-size)
        add_custom_command(TARGET ${TARGET} POST_BUILD
            COMMAND ${PICO_COMPILER_SIZE} ${CMAKE_CURRENT_LIST_DIR}/../build/src/$<IF:$<BOOL:$<TARGET_PROPERTY:${TARGET},OUTPUT_NAME>>,$<TARGET_PROPERTY:${TARGET},OUTPUT_NAME>,$<TARGET_PROPERTY:${TARGET},NAME>>.elf
            VERBATIM
        )
    endif()
endfunction()

# create map/bin/hex/uf2 file in addition to ELF.
pico_add_extra_outputs(m4)
# also create additional disassembled file
pico_add_dis_output2(m4)

##Initializing the clock to 80MHz
#target_compile_definitions(m4 PRIVATE
#	PLL_SYS_REFDIV=1
#	PLL_SYS_VCO_FREQ_HZ=1440000000
#	PLL_SYS_POSTDIV1=6
#	PLL_SYS_POSTDIV2=3
#)
